# Social-Network-Analysis-with-Graph-Neural-Networks

./: .gitignore  0421.py  0421_modernized.py  README.md  pyproject.toml  requirements.txt  test_installation.py
.github/workflows/: ci.yml
configs/: default.yaml  gat.yaml  graphsage.yaml
demo/: streamlit_app.py
notebooks/: social_network_analysis_demo.ipynb
scripts/: run_demo.py  train.py
src/social_network_analysis/: __init__.py
src/social_network_analysis/data/: dataset.py
src/social_network_analysis/eval/: evaluator.py
src/social_network_analysis/models/: gnn_models.py
src/social_network_analysis/train/: trainer.py
src/social_network_analysis/utils/: device.py
tests/: test_basic.py
